--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/Users/aidan/Desktop/finance_agent/config.py
+config.py
 
-/Users/aidan/Desktop/finance_agent/Agent/agent_config.py
-
+Agent/agent_config.py
